formatted and added some comments
